fix menu drop down z-index

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -3639,7 +3639,7 @@ evoslider.galleriffic dd .evoEmbed img
 .sf-menu li.sfHover ul {
   left:     17px;
   top:      2.3em; /* match top ul list item height */
-  z-index:    99;
+  z-index:    101;
 }
 ul.sf-menu li:hover li ul,
 ul.sf-menu li.sfHover li ul {
